# SolrClient2

./: README.md  pyproject.toml  requirements.txt
src/SolrClient2/: indexq.py  schema.py  solrclient.py  solrresp.py
src/SolrClient2/helpers/: reindexer.py
