[build-system]
requires = ["hatchling >= 1.26", 
            "kazoo >= 2.10.0", 
            "requests >= 2.32.5", 
            "tox >= 4.31.0", 
            "mmh3 >= 5.2.0", 
            "setuptools >= 80.9.0"]

[project]
name = "SolrClient2"
version = "0.3.1"
authors = [
  { name="Ross Thompson", email="ross.thompson@tbs-sct.gc.ca" },
]
description = "A simple python library for Solr; built in python3 with support for Solr 9."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "APACHE-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/open-data/SolrClient2"
Issues = "https://github.com/open-data/SolrClient2/issues"